[package]
name = "wf_collector_rs"
description = "UDP and WebSocket data collector for WeatherFlow Smart Weather stations."
license = "BSD-3-Clause"
version = "0.1.0"
authors = ["Jason Fritcher <jkf@wolfnet.org>"]
edition = "2018"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
log = "0.4"
simple_logger = "1.16.0"
tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.18.0", features = ["connect","rustls-tls-native-roots"] }
tokio-rustls = "0.23.4"
chrono = "0.4.23"
futures = "0.3.26"
futures-util = "0.3.26"
url = "2.3.1"
mqtt-async-client = "0.3.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.14", default_features = false, features = ["rustls-tls-native-roots"] }
getopts = "0.2.21"
